name:                maseek-codes
version:             1.0.0.0
synopsis:            Blog website
description:         Please see README.md
homepage:            https://github.com/githubuser/maseek-codes#readme
license:             GPL-3
license-file:        LICENSE
author:              Tomas Zemanovic
maintainer:          tzemanovic@gmail.com
copyright:           2016 Tomas Zemanovic
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable site
  main-is:             site.hs
  ghc-options:         -threaded
  build-depends:       base == 4.*
                     , hakyll == 4.9.*
                     , filepath == 1.4.*
                     , time == 1.6.*
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/maseek-codes
